# demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  coef.npy  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
docs/source/: api.rst  conf.py  index.rst
models/: .gitignore  linear_coef.npy.dvc
scripts/: train_linear.py
src/my_lib/: base.py  config.py  linear_model.py  logistic_model.py
tests/: test_linear.py  test_logistic.py
