[project]
name = "my-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Leipen",email = "diegoleipen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "my_lib", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autodoc-typehints (>=3.5.2,<4.0.0)",
    "mlflow (>=3.6.0,<4.0.0)"
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true

[tool.ruff]
src = ["src", "tests"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
# ignore = ["E501"]  # example if you want to allow long lines

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false